Updated russian translation.
Former-commit-id: 48f722f7b6c0c56ec268d063c7dbce2369358a1a

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-17  Valek Filippov  <frob@df.ru>
+
+	* ru.po: updated russian translation.
+
 2000-11-14  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
