Fix alleged problem with small TGA images
Former-commit-id: b678992aeb1a787bed78d08abb51a14a6d91fe11

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-18  Nick Lamb  <njl195@zepler.org.uk>
+
+	* plug-ins/common/tga.c: Fix alleged problem with small images
+
 2000-11-18  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/rcm/rcm_pixmaps.h: removed.
