--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-19  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/gimpenv.c: a missing newline confused gtk-doc. Minor doc fixes.
+
 2000-11-18  Nick Lamb  <njl195@zepler.org.uk>
 
 	* plug-ins/common/tga.c: Fix alleged problem with small images
