Little-endian fix for 16bit TIFF and Use same endian-detect as other plug-ins for PCX
Former-commit-id: 97294fc0d45b9a014919231c42a86d3426b34133

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-19  Nick Lamb  <njl195@zepler.org.uk>
+
+	* plug-ins/common/tiff.c: Little-endian fix for 16bit TIFF
+	* plug-ins/common/pcx.c: Use same endian-detect as other plug-ins
+
 2000-11-19  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/gimpenv.c: a missing newline confused gtk-doc. Minor doc fixes.
