--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-24  Sven Neumann  <sven@gimp.org>
+
+	* INSTALL: mention that GIMP will not compile, nor work with 
+	unstable GTK+ version 1.3.x.
+
 2000-11-21  Sven Neumann  <sven@gimp.org>
 
 	* app/gdisplay_color.c
