--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-22  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated german translation
+
 2000-11-17  Valek Filippov  <frob@df.ru>
 
 	* ru.po: updated russian translation.
