czech translation update
Former-commit-id: 1157b21db3d94b311a44edf1f3e08ce5aac17793

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+Wed Nov 22 23:49:21 CET 2000  Stanislav Brabec  <utx@penguin.cz>
+
+	* cs.po: Updated translation.
+
 2000-11-14  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
