--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+Wed Nov 22 23:47:14 CET 2000  Stanislav Brabec  <utx@penguin.cz>
+
+	* cs.po: Updated translation.
+
 2000-11-22  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated german translation
