--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+Wed Nov 22 23:46:34 CET 2000  Stanislav Brabec  <utx@penguin.cz>
+
+	* cs.po: Updated translation.
+
 2000-11-14  Valek Filippov  <frob@df.ru>
 
 	* ru.po: Updated russian translation.
