Updated French translations.
Former-commit-id: 98e8d786d1249ee78f309b01c4c73242114c2b1c

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-24  Christophe Merlet  <redfox@eikonex.org>
+
+	* fr.po: updated French translation.
+
 2000-11-05  Daniel Egger <egger@suse.de>
 
 	* hr.po: Added Croatian translation
