--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-24  Christophe Merlet  <redfox@eikonex.org>
+
+	* fr.po: updated French translation.
+
 Wed Nov 22 23:49:21 CET 2000  Stanislav Brabec  <utx@penguin.cz>
 
 	* cs.po: Updated translation.
