--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-24  Christophe Merlet  <redfox@eikonex.org>
+
+	* fr.po: Updated French translation.
+
 Wed Nov 22 23:46:34 CET 2000  Stanislav Brabec  <utx@penguin.cz>
 
 	* cs.po: Updated translation.
