2000-11-24 Garry R. Osgood <gosgood>@idt.net * * app/smudge.c Defer tool initialization to first motion event. Fixes latency problem that gave rise to Shift-smudge bug. Closes #30778.
Former-commit-id: 18871b798e3da108714b30f11d24a5fb550cf3f0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-11-24  Garry R. Osgood <gosgood@idt.net>
+	* app/smudge.c
+ 	Defer tool initialization to first motion event.
+	Fixes latency problem that gave rise to Shift-smudge bug. 
+	Closes #30778. 
+
 2000-11-24  Sven Neumann  <sven@gimp.org>
 
 	* INSTALL: mention that GIMP will not compile, nor work with 
