--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-11-25  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>
+
+	* ja.po: updated japanese translation.
+
 2000-11-24  Christophe Merlet  <redfox@eikonex.org>
 
 	* fr.po: Updated French translation.
