--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2000-11-27  Austin Donnelly <austin@gimp.org>
+
+	* plug-ins/ifscompose/ifscompose.c
+	* plug-ins/ifscompose/ifscompose_storage.c: Element labels now
+	    properly preserved across multiple runs.  Allow run with same
+	    values.  This is a partial fix for Bug#9156: bug in ifscompose.
+	    Not all the behaviour described in that bug report could be
+	    reproduced.  Thanks to David Hodson <hodsond@ozemail.com.au>
+	    for putting the work in to sort this out and produce the patch.
+
 2000-11-26  Sven Neumann  <sven@gimp.org>
 
 	* PLUG_IN_MAINTAINERS
