--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-11-27  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/print/README
+	* plug-ins/print/RELNOTES
+	* plug-ins/print/print-pcl.c: Version 3.0.4
+
 2000-11-27  Austin Donnelly <austin@gimp.org>
 
 	* plug-ins/ifscompose/ifscompose.c
