use rint(). The old behaviour was broken for neagtive values.
2000-11-27  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpwidgets.c (gimp_int_adjustment_update): use rint().
	The old behaviour was broken for neagtive values.


Former-commit-id: ceab8aa3589a7435b4b5952ae07848e6cf994b43

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-11-27  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpwidgets.c (gimp_int_adjustment_update): use rint(). 
+	The old behaviour was broken for neagtive values.
+
 2000-11-27  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/print/README
