plug-ins/print/README plug-ins/print/RELNOTES Updated to bugfix release
2000-12-02  Michael Natterer  <mitch@gimp.org>

	* plug-ins/print/README
	* plug-ins/print/RELNOTES
	* plug-ins/print/print-util.c: Updated to bugfix release 4.0.4


Former-commit-id: 86b0bd74b583ff501edfa41e35fdfc6e5f01aec2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-12-02  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/print/README
+	* plug-ins/print/RELNOTES
+	* plug-ins/print/print-util.c: Updated to bugfix release 4.0.4
+
 2000-11-30  Andy Thomas <alt@gimp.org>
 
 	* app/curves.c
