--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-03  Sven Neumann  <sven@gimp.org>
+
+	* de.po: updated german translation
+
 2000-11-24  Christophe Merlet  <redfox@eikonex.org>
 
 	* fr.po: updated French translation.
