do not set the layer mode of the bottom layer to NORMAL_MODE if it is
2000-12-03  Sven Neumann  <sven@gimp.org>

	* app/gimpimage.c: do not set the layer mode of the bottom layer to
	NORMAL_MODE if it is DISSOLVE_MODE since the latter does not work
	on the projection with the lower layer but on the layers alpha
	channel. Fixes bug #7829.


Former-commit-id: 1edd8235458be1cd86f3ff5682b28f8f6d5cccbf

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-12-03  Sven Neumann  <sven@gimp.org>
+
+	* app/gimpimage.c: do not set the layer mode of the bottom layer to
+	NORMAL_MODE if it is DISSOLVE_MODE since the latter does not work
+	on the projection with the lower layer but on the layers alpha
+	channel. Fixes bug #7829.
+
 2000-12-03  Michael Natterer  <mitch@gimp.org>
 
 	* app/layers_dialog.c: when applying or deleting the layer mask,
