--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-04  Valek Filippov  <frob@df.ru>
+
+	* ru.po: updated russian translation.
+
 2000-12-03  Sven Neumann  <sven@gimp.org>
 
 	* de.po: updated german translation
