Fixed up Norwegian translation.
2000-12-05  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Fixed up Norwegian translation.


Former-commit-id: 30314d083ecf2f9b1933b0220e42d86d4b6cadcc

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-05  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Fixed up Norwegian translation.
+	
 2000-11-25  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>
 
 	* ja.po: updated japanese translation.
