--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-07  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>
+
+	* ja.po: updated japanese translation.
+
 2000-12-04  Valek Filippov  <frob@df.ru>
 
 	* ru.po: updated russian translation.
