--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2000-12-07  Shirasaki Yasuhiro  <yasuhiro@gnome.gr.jp>
+
+	* ja.po: updated Japanese translation.
+
 2000-11-24  Christophe Merlet  <redfox@eikonex.org>
 
 	* fr.po: updated French translation.
