Added a brush contributed by Nevit <nevilo@yahoo.com>.
* plug-ins/gimpressionist/Brushes/{Makefile.in,snow1.pgm}: Added a
brush contributed by Nevit <nevilo@yahoo.com>.


Former-commit-id: b302fe37c0b6dff5d0e3d23a402fd5f693d54483

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2000-12-07  Vidar Madsen  <vidar@gimp.org>
+
+	* plug-ins/gimpressionist/Brushes/{Makefile.in,snow1.pgm}: Added a
+	brush contributed by Nevit <nevilo@yahoo.com>.
+
 2000-12-07  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/MapObject/mapobject_image.c: set the background using 
